# sdb

sdb/: CMakeLists.txt  CMakePresets.json  README.md  Setup.md  sdb-config.cmake  vcpkg.json
sdb/src/: CMakeLists.txt  libsdb.cpp
sdb/tools/: CMakeLists.txt  sdb.cpp
